Get MappedFile to work on OpenJDK 9+, with add-opens